--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -40,7 +40,7 @@ CPP_FILES = \
 	main.cpp \
 	spi4teensy3.cpp \
 	blinkytile.cpp \
-	patterns.cpp \
+	pov.cpp \
 	serialloop.cpp \
 	buttons.cpp \
         animation.cpp \
